--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,15 @@
 cmake_minimum_required(VERSION 3.5)
 
-if (POLICY CMP0048)
+if(POLICY CMP0048)
   cmake_policy(SET CMP0048 NEW)
-endif (POLICY CMP0048)
+endif(POLICY CMP0048)
 
-project(ping VERSION 0.1 LANGUAGES C)
+project(
+  ft_ping
+  VERSION 0.1
+  LANGUAGES C)
 
-set(SRC
-  src/main.c
-  src/args.c
-)
+set(SRC src/main.c)
 
 include_directories(include)
 add_executable(${PROJECT_NAME} ${SRC})
